Modified Spec informations

--- a/misc/httpd.conf/kermit-webui.conf
+++ b/misc/httpd.conf/kermit-webui.conf
@@ -1,17 +1,17 @@
-<Location "/kermit/">
-    SetHandler python-program
-    PythonHandler django.core.handlers.modpython
-    SetEnv DJANGO_SETTINGS_MODULE kermit.settings
-    PythonOption django.root /kermit
-    PythonDebug On
-    PythonPath "['/usr/share/kermit'] + sys.path"
+Alias /robots.txt /var/www/kermit/static/robots.txt
+Alias /favicon.ico /var/www/kermit/images/favicon.ico
 
-#    BASIC AUTH
-#    ===============
-#    AuthType Basic
-#    AuthName "Kermit Authentication"
-#    AuthUserFile /etc/httpd/conf/passwords
-#    Require valid-user 
-</Location>
+Alias /media/ /var/www/kermit/
+Alias /static/ /var/www/kermit/
 
-Alias /static /var/www/kermit/static
+<Directory /var/www/kermit>
+Order deny,allow
+Allow from all
+</Directory>
+
+WSGIScriptAlias / /etc/kermit/scripts/django.wsgi
+
+<Directory /etc/kermit/scripts>
+Order allow,deny
+Allow from all
+</Directory>
