Completed RPM configuration

--- a/misc/httpd.conf/kermit-webui.conf
+++ b/misc/httpd.conf/kermit-webui.conf
@@ -1,17 +1,24 @@
-Alias /robots.txt /var/www/kermit/static/robots.txt
-Alias /favicon.ico /var/www/kermit/images/favicon.ico
+LoadModule wsgi_module modules/mod_wsgi.so
 
-Alias /media/ /var/www/kermit/
-Alias /static/ /var/www/kermit/
+Alias /robots.txt /var/www/kermit-webui/static/robots.txt
+Alias /favicon.ico /var/www/kermit-webui/images/favicon.ico
 
-<Directory /var/www/kermit>
+Alias /media/ /var/www/kermit-webui/uploads/
+Alias /static/ /var/www/kermit-webui/static/
+
+<Directory /var/www/kermit-webui/static/>
 Order deny,allow
 Allow from all
 </Directory>
 
-WSGIScriptAlias / /etc/kermit/scripts/django.wsgi
+<Directory /var/www/kermit-webui/uploads/>
+Order deny,allow
+Allow from all
+</Directory>
 
-<Directory /etc/kermit/scripts>
+WSGIScriptAlias / /etc/kermit-webui/scripts/django.wsgi
+
+<Directory /etc/kermit-webui/scripts>
 Order allow,deny
 Allow from all
 </Directory>
