Added Authentication Modules and configurations

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -5,6 +5,7 @@ amqp_receive_folder=/tmp
 static_file_location=
 templates_location=
 fixtures_location=
+authentication=default
 
 
 [webui-database]
