Removed XLS from exported (waiting for python package for el5) Added first raw version of service status Updated initial_data.json file

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -21,6 +21,6 @@ main.file=/tmp/kermit-webui.log
 main.level=DEBUG
 
 calls.file=/tmp/kermit-mcollective-calls.log
-calls.level=DEBUG
+calls.level=INFO
 
 
