--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -1,6 +1,7 @@
 [webui]
 base_url=
 rest_server_url=http://localhost:4567/mcollective/
+rest_server_ping_url=http://localhost:4567/
 amqp_receive_folder=/tmp
 static_file_location=
 templates_location=
