Updated ACLs for Classes/Server Updated ACLs importer Added docs with sample ACLs json file

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -8,6 +8,10 @@ templates_location=
 fixtures_location=
 authentication=default
 environment.level=2
+filters.server=false
+filters.class=true
+filter.agent=false
+filter.action=false
 
 
 [webui-database]
