Updated model adding mail subject information Externalize From email address (in config file) Removed useless prod_settings Update spec file

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -12,6 +12,7 @@ filters.server=false
 filters.class=true
 filter.agent=false
 filter.action=false
+alerting.from_mail=no_reply@kermit.fr
 
 
 [webui-database]
