Refactored receive queues folders to respect new sender version

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -2,7 +2,8 @@
 base_url=
 rest_server_url=http://localhost:4567/mcollective/
 rest_server_ping_url=http://localhost:4567/
-amqp_receive_folder=/tmp
+amqp_receive_inventory_folder=/var/lib/kermit/queue/kermit.inventory
+amqp_receive_log_folder=/var/lib/kermit/queue/kermit.log
 static_file_location=
 templates_location=
 fixtures_location=
