Added CeleryBeat Tasks Removed Useless stuffs Added Email SMTP Host configuration (default is localhost) Added orce Send Email in the admin area

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -14,6 +14,11 @@ filters.class=true
 filter.agent=false
 filter.action=false
 alerting.from_mail=no_reply@kermit.fr
+email.host=localhost
+email.port=25
+email.username=
+email.password=
+email.usetls=False
 
 
 [webui-database]
