Created OracleDB platform

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -9,8 +9,8 @@ templates_location=
 fixtures_location=
 authentication=default
 environment.level=2
-filters.server=false
-filters.class=true
+filters.server=true
+filters.class=false
 filter.agent=false
 filter.action=false
 alerting.from_mail=no_reply@kermit.fr
