Moved admin area title to properties file

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -20,6 +20,8 @@ email.username=
 email.password=
 email.usetls=False
 
+admin.area.title=Kermit Admin Area
+
 
 [webui-database]
 driver=django.db.backends.sqlite3
