--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -9,8 +9,8 @@ templates_location=
 fixtures_location=
 authentication=default
 environment.level=2
-filters.server=true
-filters.class=false
+filters.server=false
+filters.class=true
 filter.agent=false
 filter.action=false
 alerting.from_mail=no_reply@kermit.fr
@@ -21,6 +21,7 @@ email.password=
 email.usetls=False
 
 admin.area.title=Kermit Admin Area
+levels.number=5
 
 
 [webui-database]
