Added new widget to display user tasks Add property to show/hide scheduler (hidden by default in opensource version because betaversion at the moment) Added model class to store scheduler jobs

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -23,6 +23,8 @@ email.usetls=False
 admin.area.title=Kermit Admin Area
 levels.number=5
 
+show_scheduler=true
+
 
 [webui-database]
 driver=django.db.backends.sqlite3
