Fixed problem in Scheduler ACLs (all server was shown even for users without permissions) Added sample properties for PostgreSQL database configuration Added property "show_status_bar" to show/hide status bar for non-admin users (True by default)

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -19,6 +19,7 @@ email.port=25
 email.username=
 email.password=
 email.usetls=False
+show_status_bar=True
 
 admin.area.title=Kermit Admin Area
 levels.number=5
@@ -33,6 +34,14 @@ host=
 port=
 user=
 password=
+
+#Sample PostgreSQL configuration
+#driver=postgresql_psycopg2
+#name=kermit
+#host=
+#port=
+#user=kermit
+#password=kermit
 
 [webui_logs]
 main.file=/tmp/kermit-webui.log
