Added Server Edit Page (based on backend Hiera system)

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -53,4 +53,10 @@ main.level=DEBUG
 calls.file=/tmp/kermit-mcollective-calls.log
 calls.level=DEBUG
 
+[hiera]
+redis_server=localhost
+redis_port = 6379
+redis_database = 0
+redis_password = LocalRed1s 
+
 
