Added VirtualHost for KermIT Prod

--- a/misc/httpd.conf/kermit-webui.conf
+++ b/misc/httpd.conf/kermit-webui.conf
@@ -1,22 +1,28 @@
-Alias /robots.txt /var/www/kermit-webui/static/robots.txt
-Alias /favicon.ico /var/www/kermit-webui/images/favicon.ico
+NameVirtualHost changeme.fqdn:80
 
-Alias /media/ /var/www/kermit-webui/uploads/
-Alias /static/ /var/www/kermit-webui/static/
+<VirtualHost changeme.fqdn:80>
+   	ServerName changeme.fqdn
 
-<Directory /var/www/kermit-webui/static/>
-Order deny,allow
-Allow from all
-</Directory>
-
-<Directory /var/www/kermit-webui/uploads/>
-Order deny,allow
-Allow from all
-</Directory>
-
-WSGIScriptAlias / /etc/kermit/webui/scripts/django.wsgi
-
-<Directory /etc/kermit/webui/scripts>
-Order allow,deny
-Allow from all
-</Directory>
+	Alias /robots.txt /var/www/kermit-webui/static/robots.txt
+	Alias /favicon.ico /var/www/kermit-webui/images/favicon.ico
+	
+	Alias /media/ /var/www/kermit-webui/uploads/
+	Alias /static/ /var/www/kermit-webui/static/
+	
+	<Directory /var/www/kermit-webui/static/>
+	Order deny,allow
+	Allow from all
+	</Directory>
+	
+	<Directory /var/www/kermit-webui/uploads/>
+	Order deny,allow
+	Allow from all
+	</Directory>
+	
+	WSGIScriptAlias /kermit/ /etc/kermit/webui/scripts/django.wsgi
+	
+	<Directory /etc/kermit/webui/scripts>
+	Order allow,deny
+	Allow from all
+	</Directory>
+</VirtualHost>
