Removed kermit base path for RPM

--- a/misc/httpd.conf/kermit-webui.conf
+++ b/misc/httpd.conf/kermit-webui.conf
@@ -19,7 +19,7 @@ NameVirtualHost changeme.fqdn:80
 	Allow from all
 	</Directory>
 	
-	WSGIScriptAlias /kermit/ /etc/kermit/webui/scripts/django.wsgi
+	WSGIScriptAlias / /etc/kermit/webui/scripts/django.wsgi
 	
 	<Directory /etc/kermit/webui/scripts>
 	Order allow,deny
