--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -29,6 +29,15 @@ levels.number=5
 
 show_scheduler=true
 
+[webui-broker]
+transport=django
+url=redis://127.0.0.1:6379/0
+user=
+password=
+celery_results_backend=redis
+redis_host=127.0.0.1
+redis_port=6379
+redis_db=0
 
 [webui-database]
 driver=django.db.backends.sqlite3
