Removed white spaces

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -64,9 +64,9 @@ calls.level=DEBUG
 
 [hiera]
 redis_server=localhost
-redis_port = 6379
-redis_database = 0
-redis_password = LocalRed1s 
+redis_port=6379
+redis_database=0
+redis_password=LocalRed1s 
 
 [puppet]
 puppetmaster_hostname=puppet.mmornati.lan
