Created Kermit Plugins Part. Closes #18  * Plugins to Control Server  * Plugins for Puppet. Closes #20 Updated jQuery to 1.8.2 and jQueryUI to 1.9.1 Refactored Server Details Page Menu (now completely Dynamic) Added injection into widget framework to add a new widget without scanning

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -66,7 +66,7 @@ calls.level=DEBUG
 redis_server=localhost
 redis_port=6379
 redis_database=0
-redis_password=LocalRed1s 
+redis_password= 
 
 [puppet]
 puppetmaster_hostname=puppet.mmornati.lan
