Removed custom scheduler by default

--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -27,7 +27,7 @@ show_status_bar=True
 admin.area.title=Kermit Admin Area
 levels.number=5
 
-show_scheduler=true
+show_scheduler=False
 
 [webui-broker]
 transport=django
