--- a/src/webui/kermit-webui.cfg
+++ b/src/webui/kermit-webui.cfg
@@ -1,10 +1,10 @@
 [webui]
 base_url=
-rest_server_url=http://localhost:4567/mcollective/
-rest_server_ping_url=http://localhost:4567/
-rest_server_scheduler=http://localhost:4567/schedule/
-rest_server_scheduler_status=http://localhost:4567/schedstatus/
-rest_server_scheduler_output=http://localhost:4567/schedoutput/
+rest_server_url=http://localhost/mcollective/
+rest_server_ping_url=http://localhost/
+rest_server_scheduler=http://localhost/schedule/
+rest_server_scheduler_status=http://localhost/schedstatus/
+rest_server_scheduler_output=http://localhost/schedoutput/
 amqp_receive_inventory_folder=/var/lib/kermit/queue/kermit.inventory
 amqp_receive_log_folder=/var/lib/kermit/queue/kermit.log
 static_file_location=
